// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Does not render address summary when shippingAsBilling is false 1`] = `
<PaymentMethod
  checkout={
    Object {
      "billingAddress": Object {},
      "paymentMethod": Object {
        "collapsed": false,
      },
      "shippingAddress": Object {
        "city": "Test City",
        "full_name": "Test Name",
        "line_1": "Test Address 1",
        "line_2": "Test Address 2",
        "zipcode": "Test Postcode",
      },
      "shippingAddressAsBillingAddress": false,
    }
  }
  setShippingBillingAddress={[Function]}
>
  <div
    aria-label="Payment method"
    className="o-form"
  >
    <h3>
      Payment Method
    </h3>
    <div>
      <button
        aria-label="Use credit or debit card"
        className="c-button"
      >
        Credit / Debit card
      </button>
      <button
        aria-label="Use paypal"
        className="c-button c-button--disabled"
        disabled="disabled"
      >
        Paypal
      </button>
      <div
        className="o-form__wrapper"
      >
        <form>
          <div
            className="o-form__input-group"
          >
            <label
              aria-label="Credit or debit card number"
              htmlFor="card_number"
            >
              Credit / Debit Card Number *
            </label>
            <input
              id="card_number"
              required="required"
              type="text"
            />
          </div>
          <div
            className="o-payment-method__security-fields"
          >
            <label
              aria-label="Card expiry date"
              className="o-payment-method__label"
              htmlFor="expiry_month"
            >
              Expiration *
            </label>
            <DropdownSelect
              aria-label="Expiry month"
              className="o-payment-method__input"
              id="expiry_month"
              name="expiry_month"
              options={
                Array [
                  "01",
                  "02",
                  "03",
                  "04",
                  "05",
                  "06",
                  "07",
                  "08",
                  "09",
                  "10",
                  "11",
                  "12",
                ]
              }
              prompt="Select a Month"
              required="required"
            >
              <div
                className="o-form__input-group"
              >
                <select
                  className="o-form__input-block o-form__input-field"
                  id="expiry_month"
                  name="expiry_month"
                  onBlur={[Function]}
                  onChange={[Function]}
                  required="required"
                  role="listbox"
                  value={undefined}
                >
                  <option
                    aria-posinset="0"
                    aria-setsize={12}
                    role="option"
                  >
                    Select a Month
                  </option>
                  <option
                    aria-posinset={1}
                    aria-setsize={12}
                    key="0"
                    role="option"
                    value="01"
                  >
                    01
                  </option>
                  <option
                    aria-posinset={2}
                    aria-setsize={12}
                    key="1"
                    role="option"
                    value="02"
                  >
                    02
                  </option>
                  <option
                    aria-posinset={3}
                    aria-setsize={12}
                    key="2"
                    role="option"
                    value="03"
                  >
                    03
                  </option>
                  <option
                    aria-posinset={4}
                    aria-setsize={12}
                    key="3"
                    role="option"
                    value="04"
                  >
                    04
                  </option>
                  <option
                    aria-posinset={5}
                    aria-setsize={12}
                    key="4"
                    role="option"
                    value="05"
                  >
                    05
                  </option>
                  <option
                    aria-posinset={6}
                    aria-setsize={12}
                    key="5"
                    role="option"
                    value="06"
                  >
                    06
                  </option>
                  <option
                    aria-posinset={7}
                    aria-setsize={12}
                    key="6"
                    role="option"
                    value="07"
                  >
                    07
                  </option>
                  <option
                    aria-posinset={8}
                    aria-setsize={12}
                    key="7"
                    role="option"
                    value="08"
                  >
                    08
                  </option>
                  <option
                    aria-posinset={9}
                    aria-setsize={12}
                    key="8"
                    role="option"
                    value="09"
                  >
                    09
                  </option>
                  <option
                    aria-posinset={10}
                    aria-setsize={12}
                    key="9"
                    role="option"
                    value="10"
                  >
                    10
                  </option>
                  <option
                    aria-posinset={11}
                    aria-setsize={12}
                    key="10"
                    role="option"
                    value="11"
                  >
                    11
                  </option>
                  <option
                    aria-posinset={12}
                    aria-setsize={12}
                    key="11"
                    role="option"
                    value="12"
                  >
                    12
                  </option>
                </select>
              </div>
            </DropdownSelect>
            <span
              className="o-payment-method__text"
            >
              /
            </span>
            <DropdownSelect
              aria-label="Expiry year"
              className="o-payment-method__input"
              id="expiry_year"
              name="expiry_year"
              options={
                Array [
                  "17",
                  "18",
                  "19",
                  "20",
                  "21",
                  "22",
                ]
              }
              prompt="Select a Year"
              required="required"
            >
              <div
                className="o-form__input-group"
              >
                <select
                  className="o-form__input-block o-form__input-field"
                  id="expiry_year"
                  name="expiry_year"
                  onBlur={[Function]}
                  onChange={[Function]}
                  required="required"
                  role="listbox"
                  value={undefined}
                >
                  <option
                    aria-posinset="0"
                    aria-setsize={6}
                    role="option"
                  >
                    Select a Year
                  </option>
                  <option
                    aria-posinset={1}
                    aria-setsize={6}
                    key="0"
                    role="option"
                    value="17"
                  >
                    17
                  </option>
                  <option
                    aria-posinset={2}
                    aria-setsize={6}
                    key="1"
                    role="option"
                    value="18"
                  >
                    18
                  </option>
                  <option
                    aria-posinset={3}
                    aria-setsize={6}
                    key="2"
                    role="option"
                    value="19"
                  >
                    19
                  </option>
                  <option
                    aria-posinset={4}
                    aria-setsize={6}
                    key="3"
                    role="option"
                    value="20"
                  >
                    20
                  </option>
                  <option
                    aria-posinset={5}
                    aria-setsize={6}
                    key="4"
                    role="option"
                    value="21"
                  >
                    21
                  </option>
                  <option
                    aria-posinset={6}
                    aria-setsize={6}
                    key="5"
                    role="option"
                    value="22"
                  >
                    22
                  </option>
                </select>
              </div>
            </DropdownSelect>
            <label
              aria-label="CVV security code"
              className="o-payment-method__label-cvv"
              htmlFor="cvv"
            >
              CVV *
              <span
                className="o-payment-method__text"
              >
                Hint
              </span>
            </label>
            <input
              className="o-payment-method__input"
              id="cvv"
              required="required"
              type="text"
            />
          </div>
          <div
            className="o-form__input-group"
          >
            <label>
              Billing address *
            </label>
          </div>
          <Input
            formName={undefined}
            label="Same as shipping address"
            name="shippingAddressAsBillingAddress"
            onBlur={undefined}
            onChange={undefined}
            type="checkbox"
            value={false}
          >
            <div
              className="o-form__input-group"
            >
              <div>
                <input
                  checked={false}
                  className="o-form__input-field"
                  id="shippingAddressAsBillingAddress"
                  name="shippingAddressAsBillingAddress"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder={undefined}
                  required={undefined}
                  type="checkbox"
                  value=""
                />
                <label
                  className="o-form__label"
                  htmlFor="shippingAddressAsBillingAddress"
                >
                  Same as shipping address
                </label>
              </div>
            </div>
          </Input>
        </form>
        <AddressForm
          addressType="billing"
          aria-label="Billing address form"
          checkout={
            Object {
              "billingAddress": Object {},
              "paymentMethod": Object {
                "collapsed": false,
              },
              "shippingAddress": Object {
                "city": "Test City",
                "full_name": "Test Name",
                "line_1": "Test Address 1",
                "line_2": "Test Address 2",
                "zipcode": "Test Postcode",
              },
              "shippingAddressAsBillingAddress": false,
            }
          }
          formName="billingAddress"
          onBlur={undefined}
          onChange={undefined}
          onShowField={undefined}
          onToggleCollapsed={undefined}
          title="Billing Address"
        >
          <div
            className="o-form"
          >
            <h3>
              Billing Address
            </h3>
            <form
              className="o-form__wrapper"
            >
              <DropdownSelect
                formName="billingAddress"
                label="Country"
                name="country_code"
                onBlur={undefined}
                onChange={undefined}
                options={
                  Array [
                    Object {
                      "id": 1,
                      "title": "United Kingdom",
                      "value": "GB",
                    },
                    Object {
                      "id": 2,
                      "title": "United States",
                      "value": "US",
                    },
                  ]
                }
                prompt="Select country"
                required={true}
                value={undefined}
              >
                <div
                  className="o-form__input-group"
                >
                  <label
                    className="o-form__label"
                    htmlFor="country_code"
                  >
                    Country
                     *
                  </label>
                  <select
                    className="o-form__input-block o-form__input-field"
                    id="country_code"
                    name="country_code"
                    onBlur={[Function]}
                    onChange={[Function]}
                    required={true}
                    role="listbox"
                    value={undefined}
                  >
                    <option
                      aria-posinset="0"
                      aria-setsize={2}
                      role="option"
                    >
                      Select country
                    </option>
                    <option
                      aria-posinset={1}
                      aria-setsize={2}
                      key="0"
                      role="option"
                      value={
                        Object {
                          "id": 1,
                          "title": "United Kingdom",
                          "value": "GB",
                        }
                      }
                    >
                      United Kingdom
                    </option>
                    <option
                      aria-posinset={2}
                      aria-setsize={2}
                      key="1"
                      role="option"
                      value={
                        Object {
                          "id": 2,
                          "title": "United States",
                          "value": "US",
                        }
                      }
                    >
                      United States
                    </option>
                  </select>
                </div>
              </DropdownSelect>
              <div
                className="o-flex o-flex__space-between"
              >
                <div
                  className="o-flex-full-width-s"
                >
                  <Input
                    className="o-form__input-block"
                    formName="billingAddress"
                    label="First Name"
                    name="first_name"
                    onBlur={undefined}
                    onChange={undefined}
                    required={true}
                    type="text"
                    value={undefined}
                  >
                    <div
                      className="o-form__input-group"
                    >
                      <div>
                        <label
                          className="o-form__label"
                          htmlFor="first_name"
                        >
                          First Name
                           *
                        </label>
                        <input
                          checked={false}
                          className="o-form__input-field o-form__input-block"
                          id="first_name"
                          name="first_name"
                          onBlur={[Function]}
                          onChange={[Function]}
                          placeholder={undefined}
                          required={true}
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </Input>
                </div>
                <div
                  className="o-flex-full-width-s"
                >
                  <Input
                    className="o-form__input-block"
                    formName="billingAddress"
                    label="Last Name"
                    name="last_name"
                    onBlur={undefined}
                    onChange={undefined}
                    required={true}
                    type="text"
                    value={undefined}
                  >
                    <div
                      className="o-form__input-group"
                    >
                      <div>
                        <label
                          className="o-form__label"
                          htmlFor="last_name"
                        >
                          Last Name
                           *
                        </label>
                        <input
                          checked={false}
                          className="o-form__input-field o-form__input-block"
                          id="last_name"
                          name="last_name"
                          onBlur={[Function]}
                          onChange={[Function]}
                          placeholder={undefined}
                          required={true}
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </Input>
                </div>
              </div>
              <a
                href="#"
                onClick={[Function]}
              >
                <p>
                  + Add Company Name (optional)
                </p>
              </a>
              <Input
                className="o-form__input-block"
                formName="billingAddress"
                label="Address 1"
                name="line_1"
                onBlur={undefined}
                onChange={undefined}
                required={true}
                type="text"
                value={undefined}
              >
                <div
                  className="o-form__input-group"
                >
                  <div>
                    <label
                      className="o-form__label"
                      htmlFor="line_1"
                    >
                      Address 1
                       *
                    </label>
                    <input
                      checked={false}
                      className="o-form__input-field o-form__input-block"
                      id="line_1"
                      name="line_1"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder={undefined}
                      required={true}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </Input>
              <a
                href="#"
                onClick={[Function]}
              >
                <p>
                  + Add Address 2 (optional)
                </p>
              </a>
              <Input
                className="o-form__input-block"
                formName="billingAddress"
                label="Post Code"
                name="zipcode"
                onBlur={undefined}
                onChange={undefined}
                required={true}
                type="text"
                value={undefined}
              >
                <div
                  className="o-form__input-group"
                >
                  <div>
                    <label
                      className="o-form__label"
                      htmlFor="zipcode"
                    >
                      Post Code
                       *
                    </label>
                    <input
                      checked={false}
                      className="o-form__input-field o-form__input-block"
                      id="zipcode"
                      name="zipcode"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder={undefined}
                      required={true}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </Input>
              <Input
                className="o-form__input-block"
                formName="billingAddress"
                label="City"
                name="city"
                onBlur={undefined}
                onChange={undefined}
                required={true}
                type="text"
                value={undefined}
              >
                <div
                  className="o-form__input-group"
                >
                  <div>
                    <label
                      className="o-form__label"
                      htmlFor="city"
                    >
                      City
                       *
                    </label>
                    <input
                      checked={false}
                      className="o-form__input-field o-form__input-block"
                      id="city"
                      name="city"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder={undefined}
                      required={true}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </Input>
              <Input
                className="o-form__input-block"
                formName="billingAddress"
                label="County"
                name="state"
                onBlur={undefined}
                onChange={undefined}
                required={true}
                type="text"
                value={undefined}
              >
                <div
                  className="o-form__input-group"
                >
                  <div>
                    <label
                      className="o-form__label"
                      htmlFor="state"
                    >
                      County
                       *
                    </label>
                    <input
                      checked={false}
                      className="o-form__input-field o-form__input-block"
                      id="state"
                      name="state"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder={undefined}
                      required={true}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </Input>
              <Input
                className="o-form__input-block"
                formName="billingAddress"
                label="Phone"
                name="primary_phone"
                onBlur={undefined}
                onChange={undefined}
                placeholder="In case Questions Arise"
                required={true}
                type="tel"
                value={undefined}
              >
                <div
                  className="o-form__input-group"
                >
                  <div>
                    <label
                      className="o-form__label"
                      htmlFor="primary_phone"
                    >
                      Phone
                       *
                    </label>
                    <input
                      checked={false}
                      className="o-form__input-field o-form__input-block"
                      id="primary_phone"
                      name="primary_phone"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="In case Questions Arise"
                      required={true}
                      type="tel"
                      value=""
                    />
                  </div>
                </div>
              </Input>
              <Input
                className="o-form__input-block"
                formName="billingAddress"
                label="Email"
                name="email"
                onBlur={undefined}
                onChange={undefined}
                placeholder="To Receive Order Confirmation"
                required={true}
                type="email"
                value={undefined}
              >
                <div
                  className="o-form__input-group"
                >
                  <div>
                    <label
                      className="o-form__label"
                      htmlFor="email"
                    >
                      Email
                       *
                    </label>
                    <input
                      checked={false}
                      className="o-form__input-field o-form__input-block"
                      id="email"
                      name="email"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="To Receive Order Confirmation"
                      required={true}
                      type="email"
                      value=""
                    />
                  </div>
                </div>
              </Input>
              <p>
                * Denotes required fields
              </p>
            </form>
          </div>
        </AddressForm>
      </div>
    </div>
    <div
      aria-label="Use gift card or rewards code"
      className="o-form__wrapper"
    >
      <p>
        + Use a Gift Card / Rewards Code
      </p>
    </div>
  </div>
</PaymentMethod>
`;

exports[`Renders correct address summary when shippingAsBilling is true 1`] = `
<PaymentMethod
  checkout={
    Object {
      "billingAddress": Object {},
      "paymentMethod": Object {
        "collapsed": false,
      },
      "shippingAddress": Object {
        "city": "Test City",
        "full_name": "Test Name",
        "line_1": "Test Address 1",
        "line_2": "Test Address 2",
        "zipcode": "Test Postcode",
      },
      "shippingAddressAsBillingAddress": true,
    }
  }
  setShippingBillingAddress={[Function]}
>
  <div
    aria-label="Payment method"
    className="o-form"
  >
    <h3>
      Payment Method
    </h3>
    <div>
      <button
        aria-label="Use credit or debit card"
        className="c-button"
      >
        Credit / Debit card
      </button>
      <button
        aria-label="Use paypal"
        className="c-button c-button--disabled"
        disabled="disabled"
      >
        Paypal
      </button>
      <div
        className="o-form__wrapper"
      >
        <form>
          <div
            className="o-form__input-group"
          >
            <label
              aria-label="Credit or debit card number"
              htmlFor="card_number"
            >
              Credit / Debit Card Number *
            </label>
            <input
              id="card_number"
              required="required"
              type="text"
            />
          </div>
          <div
            className="o-payment-method__security-fields"
          >
            <label
              aria-label="Card expiry date"
              className="o-payment-method__label"
              htmlFor="expiry_month"
            >
              Expiration *
            </label>
            <DropdownSelect
              aria-label="Expiry month"
              className="o-payment-method__input"
              id="expiry_month"
              name="expiry_month"
              options={
                Array [
                  "01",
                  "02",
                  "03",
                  "04",
                  "05",
                  "06",
                  "07",
                  "08",
                  "09",
                  "10",
                  "11",
                  "12",
                ]
              }
              prompt="Select a Month"
              required="required"
            >
              <div
                className="o-form__input-group"
              >
                <select
                  className="o-form__input-block o-form__input-field"
                  id="expiry_month"
                  name="expiry_month"
                  onBlur={[Function]}
                  onChange={[Function]}
                  required="required"
                  role="listbox"
                  value={undefined}
                >
                  <option
                    aria-posinset="0"
                    aria-setsize={12}
                    role="option"
                  >
                    Select a Month
                  </option>
                  <option
                    aria-posinset={1}
                    aria-setsize={12}
                    key="0"
                    role="option"
                    value="01"
                  >
                    01
                  </option>
                  <option
                    aria-posinset={2}
                    aria-setsize={12}
                    key="1"
                    role="option"
                    value="02"
                  >
                    02
                  </option>
                  <option
                    aria-posinset={3}
                    aria-setsize={12}
                    key="2"
                    role="option"
                    value="03"
                  >
                    03
                  </option>
                  <option
                    aria-posinset={4}
                    aria-setsize={12}
                    key="3"
                    role="option"
                    value="04"
                  >
                    04
                  </option>
                  <option
                    aria-posinset={5}
                    aria-setsize={12}
                    key="4"
                    role="option"
                    value="05"
                  >
                    05
                  </option>
                  <option
                    aria-posinset={6}
                    aria-setsize={12}
                    key="5"
                    role="option"
                    value="06"
                  >
                    06
                  </option>
                  <option
                    aria-posinset={7}
                    aria-setsize={12}
                    key="6"
                    role="option"
                    value="07"
                  >
                    07
                  </option>
                  <option
                    aria-posinset={8}
                    aria-setsize={12}
                    key="7"
                    role="option"
                    value="08"
                  >
                    08
                  </option>
                  <option
                    aria-posinset={9}
                    aria-setsize={12}
                    key="8"
                    role="option"
                    value="09"
                  >
                    09
                  </option>
                  <option
                    aria-posinset={10}
                    aria-setsize={12}
                    key="9"
                    role="option"
                    value="10"
                  >
                    10
                  </option>
                  <option
                    aria-posinset={11}
                    aria-setsize={12}
                    key="10"
                    role="option"
                    value="11"
                  >
                    11
                  </option>
                  <option
                    aria-posinset={12}
                    aria-setsize={12}
                    key="11"
                    role="option"
                    value="12"
                  >
                    12
                  </option>
                </select>
              </div>
            </DropdownSelect>
            <span
              className="o-payment-method__text"
            >
              /
            </span>
            <DropdownSelect
              aria-label="Expiry year"
              className="o-payment-method__input"
              id="expiry_year"
              name="expiry_year"
              options={
                Array [
                  "17",
                  "18",
                  "19",
                  "20",
                  "21",
                  "22",
                ]
              }
              prompt="Select a Year"
              required="required"
            >
              <div
                className="o-form__input-group"
              >
                <select
                  className="o-form__input-block o-form__input-field"
                  id="expiry_year"
                  name="expiry_year"
                  onBlur={[Function]}
                  onChange={[Function]}
                  required="required"
                  role="listbox"
                  value={undefined}
                >
                  <option
                    aria-posinset="0"
                    aria-setsize={6}
                    role="option"
                  >
                    Select a Year
                  </option>
                  <option
                    aria-posinset={1}
                    aria-setsize={6}
                    key="0"
                    role="option"
                    value="17"
                  >
                    17
                  </option>
                  <option
                    aria-posinset={2}
                    aria-setsize={6}
                    key="1"
                    role="option"
                    value="18"
                  >
                    18
                  </option>
                  <option
                    aria-posinset={3}
                    aria-setsize={6}
                    key="2"
                    role="option"
                    value="19"
                  >
                    19
                  </option>
                  <option
                    aria-posinset={4}
                    aria-setsize={6}
                    key="3"
                    role="option"
                    value="20"
                  >
                    20
                  </option>
                  <option
                    aria-posinset={5}
                    aria-setsize={6}
                    key="4"
                    role="option"
                    value="21"
                  >
                    21
                  </option>
                  <option
                    aria-posinset={6}
                    aria-setsize={6}
                    key="5"
                    role="option"
                    value="22"
                  >
                    22
                  </option>
                </select>
              </div>
            </DropdownSelect>
            <label
              aria-label="CVV security code"
              className="o-payment-method__label-cvv"
              htmlFor="cvv"
            >
              CVV *
              <span
                className="o-payment-method__text"
              >
                Hint
              </span>
            </label>
            <input
              className="o-payment-method__input"
              id="cvv"
              required="required"
              type="text"
            />
          </div>
          <div
            className="o-form__input-group"
          >
            <label>
              Billing address *
            </label>
          </div>
          <Input
            formName={undefined}
            label="Same as shipping address"
            name="shippingAddressAsBillingAddress"
            onBlur={undefined}
            onChange={undefined}
            type="checkbox"
            value={true}
          >
            <div
              className="o-form__input-group"
            >
              <div>
                <input
                  checked={true}
                  className="o-form__input-field"
                  id="shippingAddressAsBillingAddress"
                  name="shippingAddressAsBillingAddress"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder={undefined}
                  required={undefined}
                  type="checkbox"
                  value={true}
                />
                <label
                  className="o-form__label"
                  htmlFor="shippingAddressAsBillingAddress"
                >
                  Same as shipping address
                </label>
              </div>
            </div>
          </Input>
        </form>
        <div
          aria-label="Shipping address to be used for billing"
          className="o-payment-method__address-summary"
        >
          <h4>
            Test Name
          </h4>
          <p>
            Test Address 1
          </p>
          <p>
            Test Address 2
          </p>
          <p>
            Test City
          </p>
          <p>
            Test Postcode
          </p>
        </div>
      </div>
    </div>
    <div
      aria-label="Use gift card or rewards code"
      className="o-form__wrapper"
    >
      <p>
        + Use a Gift Card / Rewards Code
      </p>
    </div>
  </div>
</PaymentMethod>
`;
